@@ -29,6 +29,9 @@
      [sshd_config.5]
      do not use lists for SYNOPSIS;
      from eric s. raymond via brad
+   - stevesk@cvs.openbsd.org 2007/01/03 00:53:38
+     [ssh-keygen.c]
+     remove small dead code; arnaud.lacombe.1@ulaval.ca via Coverity scan
 
 20061205
  - (djm) [auth.c] Fix NULL pointer dereference in fakepw().  Crash would
@@ -2649,4 +2652,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4598 2007/01/05 05:29:30 djm Exp $
+$Id: ChangeLog,v 1.4599 2007/01/05 05:29:55 djm Exp $
